--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
 </ul>
 
-<a href="http://validator.w3.org/check/referer">
-    <img src="https://github.com/AlmotasemAlawneh/WAP/edit/master/index.html" alt="W3c Html Validator"></a>
-
-    <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/edit/master/index.html" alt="W3c CSS Validator"></a>
+<a href="http://validator.w3.org/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="W3c Html Validator"></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="W3c CSS Validator"></a>
 </div>
 </body>
 </html>
