--- a/AboutMe.html
+++ b/AboutMe.html
@@ -35,10 +35,11 @@
 			</dl>
 			</li>
 		</ul>
-		<a href="http://validator.w3.org/check/referer">
-			<img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="W3c Html Validator"></a>
-
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="W3c CSS Validator"></a>
+		<div>
+<a href="https://validator.w3.org/nu/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/blob/master/motta.jpeg" alt="W3c Html Validator"></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/blob/master/motta.jpeg" alt="W3c CSS Validator"></a>
+    </div>
+		
 		</div>
 
 	</body>
