--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 </ul>
 <div>
-<a href="https://validator.w3.org/nu/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/blob/master/motta.jpeg" alt="W3c Html Validator"></a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/blob/master/motta.jpeg" alt="W3c CSS Validator"></a>
+<a href="https://validator.w3.org/nu/check/referer"><img src="w3c-html.png" alt="W3c Html Validator"></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
     </div>
 </body>
 </html>
