--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <head>
 	<title>Lab0-1 AboutMe</title>
 </head>
@@ -35,12 +35,13 @@
 			</dl>
 			</li>
 		</ul>
-		<div>
-<a href="https://validator.w3.org/nu/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/blob/master/motta.jpeg" alt="W3c Html Validator"></a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="https://github.com/AlmotasemAlawneh/WAP/blob/master/motta.jpeg" alt="W3c CSS Validator"></a>
-    </div>
+		
 		
 		</div>
+	<div>
+<a href="https://validator.w3.org/nu/check/referer"><img src="w3c-html.png" alt="W3c Html Validator"></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
+    </div>
 
 	</body>
 	</html>
