--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Lab0-1 Index</title>
+        <style media="screen, projection" id="s5ss">body {font-size: 28px !important;}</style>
     </head>
 <body>
 
