--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Lab0-1 Index</title>
-        <style media="screen, projection" id="s5ss">body {font-size: 28px !important;}</style>
+     
     </head>
 <body>
 
