--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </ul>
 <div>
 <a href="https://validator.w3.org/nu/check/referer"><img src="w3c-html.png" alt="W3c Html Validator"></a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
     </div>
 </body>
 </html>
