--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>Lab0-1 AboutMe</title>
 </head>
@@ -40,7 +41,7 @@
 		</div>
 	<div>
 <a href="https://validator.w3.org/nu/check/referer"><img src="w3c-html.png" alt="W3c Html Validator"></a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
     </div>
 
 	</body>
