--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 <body>
 
-<img src="images/motta.jpeg" alt="Motta"/>
+<img src="images\motta.jpeg" alt="Motta"/>
 <br>
 <h1>Almuatasim Alawneh</h1>
 
@@ -20,8 +20,8 @@
 
 </ul>
 <div>
-<a href="https://validator.w3.org/nu/check/referer"><img src="images/w3c-html.png" alt="W3c Html Validator"></a>
-<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="W3c CSS Validator"></a>
+<a href="https://validator.w3.org/nu/check/referer"><img src="images\w3c-html.png" alt="W3c Html Validator"></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="images\w3c-css.png" alt="W3c CSS Validator"></a>
 </div>
 </body>
 </html>
