--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 <body>
 
-<img src="..images/motta.jpeg" alt="Motta"/>
+<img src="images/motta.jpeg" alt="Motta"/>
 <br>
 <h1>Almuatasim Alawneh</h1>
 
