--- a/AboutMe.html
+++ b/AboutMe.html
@@ -40,8 +40,8 @@
 		
 		</div>
 	<div>
-<a href="https://validator.w3.org/nu/check/referer"><img src="w3c-html.png" alt="W3c Html Validator"></a>
-<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="W3c CSS Validator"></a>
+<a href="https://validator.w3.org/nu/check/referer"><img src="images/w3c-html.png" alt="W3c Html Validator"></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="W3c CSS Validator"></a>
     </div>
 
 	</body>
