--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<title>Lab0-1 AboutMe</title>
+	<link rel="shortcut icon" type="image/png" href="images/motta_jAu_icon.ico"/>
 </head>
 <body>
 	<div>
 	<a href="index.html">W1D1 - The HomePage </a>
 		<h1>About Motta</h1>
 		<p>
-		My Names is <span style="color:blue">Almuatasim Alawneh</span> my short Name <q>Motta</q>  
+		My Names is <strong>Almuatasim Alawneh</span> my short Name <q>Motta</q>  
 		I started compro class on May-2019 at 	<a href="https://www.mum.edu/">MUM</a> this is just to practic HTML tags...
 		
 	
