--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>Lab0-1 Index</title>
- 
+        <link rel="shortcut icon" type="image/png" href="images/motta_jAu_icon.ico"/>
     </head>
 <body>
 
-<img src="images/motta.jpeg" alt="Motta"/>
+<img src="images/motta.jpeg" alt="Motta" width="250" height="350"/>
 <br>
 <h1>Almuatasim Alawneh</h1>
 
