--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,7 +7,7 @@
 <body>
 	<div>
 	<a href="index.html">W1D1 - The HomePage </a>
-		<h1>About Moo</h1>
+		<h1>About Motta</h1>
 		<p>
 		My Names is <strong>Almuatasim Alawneh</strong> my short Name <q>Moo</q>  
 		I started compro class on May-2019 at 	<a href="https://www.mum.edu/">MUM</a> this is just to practic HTML tags...
@@ -27,7 +27,7 @@
 		<h3>My favorite TV show/movie/book</h3>
 		<ol>
 			<li>
-			TV Show -<a href="https://www.imdb.com/title/tt0903747/?ref_=ttep_ql">Breaking Bad</a>
+			TV Show - Breaking Bad -<a href="https://www.imdb.com/title/tt0903747/?ref_=ttep_ql">(IMDB)</a>
 			<dl>
 				<dt>Cast</dt>
 				<dd>Bryan Cranston</dd>
@@ -55,14 +55,14 @@
 			<img src="https://i.ytimg.com/vi/x9mGRTaD_00/maxresdefault.jpg" alt="sad" width="200" height="150">
 		</p>
 		<h3>Fun facts about my Neighbors</h3>
-		
+		<em>(I accully dont know many people so below are just test Data)</em>
 		<ul>
-			<li>I dont know anyone :)</li>
-			<li>I dont know anyone :)</li>
-			<li>I dont know anyone :)</li>
-			<li>I dont know anyone :)</li>
-			<li>I dont know anyone :)</li>
-			<li>I dont know anyone :)</li>
+			<li>X:<em>I dont know anyone :)</em></li>
+			<li>Y:<strong>I dont know anyone :)</strong></li>
+			<li>Z:I dont know anyone :)</li>
+			<li>K:I dont know anyone :)</li>
+			<li>L:I dont know anyone :)</li>
+			<li>M:I dont know anyone :)</li>
 		</ul>
 		</div>
 	<div>
