--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,16 +3,17 @@
 <head>
 	<title>Lab0-1 AboutMe</title>
 	<link rel="shortcut icon" type="image/png" href="images/motta_jAu_icon.ico"/>
+	<link rel="stylesheet" type="text/css" href="css/styleme.css">
 </head>
 <body>
 	<div>
-	<a href="index.html">W1D1 - The HomePage </a>
+	<a href="index.html"> &lt;-W1D1 - The HomePage </a>
 		<h1>About Motta</h1>
 		<p>
-		My Names is <strong>Almuatasim Alawneh</strong> my short Name <q>Moo</q>  
+		My Names is <strong style="color: brown">Almuatasim Alawneh</strong> my short Name <q style="color: brown">Moo</q>  
 		I started compro class on May-2019 at 	<a href="https://www.mum.edu/">MUM</a> this is just to practic HTML tags...
 		<br>
-		<strong>My Id : <em>610157</em></strong>
+		<strong style="color: brown">My Id : <em>610157</em></strong>
         </p>
 		<h3>My Compro Classes..</h3>
 		<ol>
@@ -25,6 +26,7 @@
 	<div>
 		
 		<h3>My favorite TV show/movie/book</h3>
+		<em>(I accully dont see movies too many...)</em>
 		<ol>
 			<li>
 			TV Show - Breaking Bad -<a href="https://www.imdb.com/title/tt0903747/?ref_=ttep_ql">(IMDB)</a>
