--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul>
     <li><a href="index.html">W1D1 - The HomePage</a> </li>
     <li><a href="AboutMe.html">W1D2 - About Me</a></li>
-    <li><a href="https://www.mum.edu/">W1D3 - Recipe</a></li>
+    <li><a href="pie.html">W1D3 - Recipe</a></li>
     <li><a href="https://www.mum.edu/">W1D4 - Movie Review</a></li>
     <li><a href="https://www.mum.edu/">W1D5 - Mp3 Library</a></li>
     <li><a href="https://www.mum.edu/">W1D6 - Movie Review PHP</a></li>
