--- a/pie.html
+++ b/pie.html
@@ -12,7 +12,7 @@
 	<div id="header">
 		<h1 id="mainTitle">Grandma's Lemon Meringue Pie</h1>
 		<div>
-			<img src="images/pie.jpg" alt="Pie Logo">
+			<img src="images/pie.JPG" alt="Pie Logo">
 			<ol id="pieType">
 				<li>One 9-inch pie</li>
 				<li>30 Min - Prep time</li>
