--- a/pie.html
+++ b/pie.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Grandma's Lemon Meringue Pie</title>
-    <meta charset="utf-8">
     <title>Lab2 Pie-Recipe</title>
     <link rel="shortcut icon" type="image/png" href="images/pie_icon.gif"/>
 	<link rel="stylesheet" type="text/css" href="css/recip.css">
