--- a/pie.html
+++ b/pie.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!-- 
+	comments:
+	Extra done..
+	1-Background
+	2-Favicon
+	3-Pie bullet
+	4-Wide headings
+	5-Tight heading background
+-->
 <html lang="en">
 <head>
     <title>Lab2 Pie-Recipe</title>
@@ -79,7 +88,7 @@
 			<span class="author">- Vickie K.</span>
 		</p>
 		<p>
-			This site can really engage my interest. Follow the recipe above and make it so! This pie is number one.
+			This site can really <strong>engage</strong> my interest. Follow the recipe above and<strong>make it so!</strong>  This pie is <strong>number one.</strong>
 			<span class="author">- Jean-Luc Piecard</span>
 		</p>
 	</div>
