--- a/tmnt.html
+++ b/tmnt.html
@@ -1,4 +1,6 @@
-<html class="gr__mumstudents_org"><head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
 		<title>TMNT - Rancid Tomatoes</title>
 
 		<meta charset="utf-8">
@@ -6,7 +8,7 @@
 	</head>
 
 	<body data-gr-c-s-loaded="true">
-			<a href="index.html"> &lt;-W1D1 - The HomePage </a>
+			
 		<div class="banner">
 			<div class="imgBanner">
 				<img  src="images/banner.png" alt="Rancid Tomatoes">
@@ -195,9 +197,11 @@
 	</div>
 	</div>
 		<div class="footer">
+			<a href="index.html"> &lt;-W1D1 - The HomePage </a>
 			<a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5"></a> <br>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS"></a>
 		</div>
 	
 
-</body><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
+</body>
+</html>
