--- a/tmnt.html
+++ b/tmnt.html
@@ -7,13 +7,14 @@
 		<link href="css/movie.css" type="text/css" rel="stylesheet">
 	</head>
 
-	<body data-gr-c-s-loaded="true">
+	<body>
 			
-		<div class="banner">
+		<div class="banner"><a href="index.html"> &lt;-W1D1 - The HomePage </a>
 			<div class="imgBanner">
 				<img  src="images/banner.png" alt="Rancid Tomatoes">
 			l</div>
 			<h1>TMNT (2007)</h1>
+
 		</div>
 
 	<div class="overall">
@@ -197,7 +198,7 @@
 	</div>
 	</div>
 		<div class="footer">
-			<a href="index.html"> &lt;-W1D1 - The HomePage </a>
+			
 			<a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5"></a> <br>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS"></a>
 		</div>
