--- a/tmnt.html
+++ b/tmnt.html
@@ -198,9 +198,8 @@
 	</div>
 	</div>
 		<div class="footer">
-			
-			<a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5"></a> <br>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS"></a>
+				<a href="https://validator.w3.org/nu/check/referer"><img src="images/w3c-html.png" alt="W3c Html Validator"></a>
+				<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="W3c CSS Validator"></a>
 		</div>
 	
 
