--- a/tmnt.html
+++ b/tmnt.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body>
-			
-		<div class="banner"><a href="index.html"> &lt;-W1D1 - The HomePage </a>
+			<a href="index.html"> &lt;-W1D1 - The HomePage </a>
+		<div class="banner">
 			<div class="imgBanner">
 				<img  src="images/banner.png" alt="Rancid Tomatoes">
 			l</div>
