--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <li><a href="pie.html">W1D3 - Recipe</a></li>
     <li><a href="tmnt.html">W1D4 - Movie Review</a></li>
     <li><a href="journal.html">W1D5 - journal</a></li>
-    <li><a href="https://www.mum.edu/">W1D6 - Mp3 Library</a></li>
-    <li><a href="https://www.mum.edu/">W1D7 - Movie Review PHP</a></li>
+    <li><a href="indexForm.html">W1D6 - Forms</a></li>
+    <li><a href="https://www.mum.edu/">W1D7 - Mp3 Library</a></li>
+    <li><a href="https://www.mum.edu/">W1D8 - Movie Review PHP</a></li>
 
 </ul>
 <div>
