--- a/indexForm.html
+++ b/indexForm.html
@@ -20,7 +20,8 @@
                 <div class="validation-wrapper">
                         <input autocomplete="off"  id="personal-first-name" maxlength="15" aria-required="true" class="" type="text" value="" required placeholder="First Name" pattern="^[a-z_A-Z]*$" title="Please enter your First Name. NO Numbers  allowed only a-z A-Z _">
                     </div></div><div class="text-input small-12 medium-6 columns required"><span><span>
-                        <label for="personal-last-name"><span>Last Name <span style="color: red"> *</span><span class="show-for-sr"><span>Required</span></span></label>
+                        <label for="personal-last-name"><span>Last Name <span style="color: red"> *</span>
+                            <span>class="show-for-sr"><span>Required</span></span></label>
                     <div class="validation-wrapper">
                     <input autocomplete="off"  id="personal-last-name" maxlength="15" aria-required="true" class="" type="text" value="" required placeholder="Last Name" pattern="^[a-z_A-Z]*$" title="Please enter your Last Name. NO Numbers  allowed only a-z A-Z _">
                 </div></span></span></div></div><div class="row"><div class="date-input small-12 medium-6 columns required"><span><span><label for="personal-date-of-birth"><span>Date of Birth <span style="color: red"> *</span></span><span class="show-for-sr"><span>Required</span></span></label>
