--- a/indexForm.html
+++ b/indexForm.html
@@ -32,7 +32,7 @@
                            </div>
                            <div class="text-input small-12 medium-6 columns required">
                               <label for="personal-last-name"><span>Last Name <span style="color: red"> *</span></span>
-                              <span>class="show-for-sr"><span>Required</span></span></label>
+                              <span class="show-for-sr"><span>Required</span></span></label>
                               <div class="validation-wrapper">
                                  <input autocomplete="off"  id="personal-last-name" maxlength="15"  class="" type="text" value="" required placeholder="Last Name" pattern="^[a-z_A-Z]*$" title="Please enter your Last Name. NO Numbers  allowed only a-z A-Z _"/>
                               </div>
