--- a/tmnt.html
+++ b/tmnt.html
@@ -4,12 +4,25 @@
 		<title>TMNT - Rancid Tomatoes</title>
 
 		<meta charset="utf-8">
+		<script src="js/tmnt.js"></script>
 		<link href="css/movie.css" type="text/css" rel="stylesheet">
 	</head>
 
 	<body>
 			<a href="index.html"> &lt;-W1D1 - The HomePage </a>
 		<div class="banner">
+				<div id="Ads" class="lab5" style="top: 50%;position: absolute;left: 25%;opacity: 0.7;width:650px"> 
+						<button id="closead"  title="this will Close the Div" style="
+						right: 0px;
+						top: 0px;
+						font-size: large;
+						font-weight: bold;">x</button>
+						<img class="mySlides" src="images/logo-horizontal.gif" alt="custom_html_banner1" style="width:100%">
+						<img class="mySlides" src="images/logo-horizontal.gif" alt="custom_html_banner2" style="width:100%">
+						<h2 id="mssage" class="hideAd" >This will be closed now</h2>
+						<!--<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+						<button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>-->
+				</div>
 			<div class="imgBanner">
 				<img  src="images/banner.png" alt="Rancid Tomatoes">
 			l</div>
@@ -201,7 +214,22 @@
 				<a href="https://validator.w3.org/nu/check/referer"><img src="images/w3c-html.png" alt="W3c Html Validator"></a>
 				<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="W3c CSS Validator"></a>
 		</div>
+	<script>
 	
+var slideIndex = 1;
+showDivs(slideIndex);
+function plusDivs(n) {
+    showDivs(slideIndex += n);
+}
+function showDivs(n) {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    if (n > x.length) { slideIndex = 1 } if (n < 1) { slideIndex = x.length } for
+        (i = 0; i < x.length; i++) { x[i].style.display = "none"; }
+    x[slideIndex - 1].style.display = "block";
+}
+
+	</script>
 
 </body>
 </html>
