--- a/tmntjs.html
+++ b/tmntjs.html
@@ -11,6 +11,18 @@
 	<body>
 			<a href="index.html"> &lt;-W1D1 - The HomePage </a>
 		<div class="banner">
+				<div id="Ads" class="lab5" style="top: 50%;position: absolute;left: 25%;opacity: 0.7;width:650px"> 
+						<button id="closead"  title="this will Close the Div" style="
+						right: 0px;
+						top: 0px;
+						font-size: large;
+						font-weight: bold;">x</button>
+						<img class="mySlides" src="images/logo-horizontal.gif" alt="custom_html_banner1" style="width:100%">
+						<img class="mySlides" src="images/logo-horizontal.gif" alt="custom_html_banner2" style="width:100%">
+						<h2 id="mssage" class="hideAd" >This will be closed now</h2>
+						<!--<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+						<button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>-->
+				</div>
 			<div class="imgBanner">
 				<img  src="images/banner.png" alt="Rancid Tomatoes">
 			l</div>
