--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <h1>Almuatasim Alawneh</h1>
 
 <ul>
-    <li><a href="index.html">W1D1 - The HomePage</a> </li>
-    <li><a href="AboutMe.html">W1D2 - About Me</a></li>
-    <li><a href="pie.html">W1D3 - Recipe</a></li>
-    <li><a href="tmnt.html">W1D4 - Movie Review</a></li>
-    <li><a href="journal.html">W1D5 - journal</a></li>
-    <li><a href="indexForm.html">W1D6 - Forms</a></li>
-    <li><a href="tmnt.html">W1D7 - Movie Review with JS</a></li>
-    <li><a href="https://www.mum.edu/">W1D8 - Mp3 Library</a></li>
+    <li><a href="index.html">Lab1 - The HomePage</a> </li>
+    <li><a href="AboutMe.html">Lab1 - About Me</a></li>
+    <li><a href="pie.html">Lab2 - Recipe</a></li>
+    <li><a href="tmnt.html">Lab3 - Movie Review</a></li>
+    <li><a href="journal.html">Lab4 - journal</a></li>
+    <li><a href="indexForm.html">Lab5 - Forms</a></li>
+    <li><a href="tmntjs.html">Lab6 - Movie Review with JS-1</a></li>
+    <li><a href="Lab7-1.txt">Lab7 - AccountFactory JS-2 part-1</a></li>
+    <li><a href="bankingAccounts.html">Lab7 - AccountFactory JS-2 part-2</a></li>
     <li><a href="https://www.mum.edu/">W1D9 - Movie Review PHP</a></li>
 
 </ul>
