--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <li><a href="journal.html">Lab4 - journal</a></li>
     <li><a href="indexForm.html">Lab5 - Forms</a></li>
     <li><a href="tmntjs.html">Lab6 - Movie Review with JS-1</a></li>
-    <li><a href="Lab7-1.txt">Lab7 - AccountFactory JS-2 part-1</a></li>
+    <li><a href="Lab7-1.txt">Lab7 -Trace JS-2 part-1</a></li>
     <li><a href="bankingAccounts.html">Lab7 - AccountFactory JS-2 part-2</a></li>
-    <li><a href="https://www.mum.edu/">W1D9 - Movie Review PHP</a></li>
+    <li><a href="Lab8-1.txt">Lab8 -Inheritance part-1</a></li>
+    <li><a href="JSiInheritance.html">Lab8 -JS- Inheritance</a></li>
+ 
 
 </ul>
 <div>
