--- a/bankingAccounts.html
+++ b/bankingAccounts.html
@@ -25,6 +25,12 @@
             <div>
                 <textarea id="textArea" cols="60" rows="20" disabled></textarea>
             </div>
-            <script src="js/bankingAccounts.js" async defer></script>
+            <div>
+                    <a href="https://webster.cs.washington.edu/jslint/?referer">
+                        <img src="images/w3c-js.png" alt="Valid JS" />
+                    </a>
+                <a href="http://jshint.com/" target="_blank">http://jshint.com/</a>
+            </div>
+            <script src="js/bankingAccounts.js"></script>
 </body>
 </html>
