--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><a href="tmntjs.html">Lab6 - Movie Review with JS-1</a></li>
     <li><a href="Lab7-1.txt">Lab7 -Trace JS-2 part-1</a></li>
     <li><a href="bankingAccounts.html">Lab7 - AccountFactory JS-2 part-2</a></li>
-    <li><a href="Lab8-1.txt">Lab8 -Inheritance part-1</a></li>
+    <li><a href="Lab-8.txt">Lab8 -Inheritance part-1</a></li>
     <li><a href="JSiInheritance.html">Lab8 -JS- Inheritance</a></li>
  
 
