--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <li><a href="bankingAccounts.html">Lab7 - AccountFactory JS-2 part-2</a></li>
     <li><a href="Lab-8.txt">Lab8 -Inheritance part-1</a></li>
     <li><a href="JSiInheritance.html">Lab8 -JS- Inheritance</a></li>
+    <li><a href="mazz.html">Lab9 -Maze</a></li>
+    <li><a href="puzzel.html">Lab9 -Puzzel</a></li>
  
 
 </ul>
