--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li><a href="JSiInheritance.html">Lab8 -JS- Inheritance</a></li>
     <li><a href="mazz.html">Lab9 -Maze</a></li>
     <li><a href="puzzel.html">Lab9 -Puzzel</a></li>
-    <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab10">Lab10 -Servlet</a></li>
+    <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab10">Lab10 -</a></li>
  
 
 </ul>
