--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <li><a href="Lab-8.txt">Lab8 -Inheritance part-1</a></li>
     <li><a href="JSiInheritance.html">Lab8 -JS- Inheritance</a></li>
     <li><a href="mazz.html">Lab9 -Maze</a></li>
-    <li><a href="puzzel.html">Lab9 -Puzzel</a></li>
-    <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab10">Lab10 -</a></li>
+    <li><a href="fifteen.html">Lab9 -Puzzel</a></li>
+    <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab10">Lab10 -Servlet1</a></li>
  
 
 </ul>
