--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <li><a href="mazz.html">Lab9 -Maze</a></li>
     <li><a href="fifteen.html">Lab9 -Puzzel</a></li>
     <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab10">Lab10 -Servlet1</a></li>
+    <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab11">Lab11 -Servlet2</a></li>
  
 
 </ul>
