--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <li><a href="fifteen.html">Lab9 -Puzzel</a></li>
     <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab10">Lab10 -Servlet1</a></li>
     <li><a href="https://github.com/AlmotasemAlawneh/WAP/tree/master/Lab11">Lab11 -Servlet2</a></li>
+    <li><a href=" https://github.com/AlmotasemAlawneh/WAP/tree/master/lab12">Lab12 -Servlet3</a></li>
+   
 </ul>
 <div>
 <a href="https://validator.w3.org/nu/check/referer"><img src="images/w3c-html.png" alt="W3c Html Validator"></a>
